--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,5 +1,49 @@
-body {
+body{
   margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  /*padding-top: 64px;*/
+  height: 100%;
 }
+
+/*.footer {*/
+  /*height: 100px;*/
+  /*background-color: #eee;*/
+  /*border-top: 1px solid #e0e0e0;*/
+  /*padding-top: 35px;*/
+  /*margin-bottom: -100px;*/
+  /*padding-bottom: 100px;*/
+/*}*/
+
+/*#contenido  {*/
+  /*min-height: 100%;*/
+
+  /*!*!* sticky footer *!*!*/
+  /*!*margin-bottom: -100px;*!*/
+  /*!*padding-bottom: 100px;*!*/
+  /*display: -webkit-flex;*/
+  /*display: flex;*/
+  /*-webkit-flex-direction: column;*/
+  /*flex-direction: column;*/
+/*}*/
+
+.posts-list {
+  display: flex;
+  box-sizing: border-box;
+  flex: 1;
+}
+
+.posts-list-int {
+  padding: 16px;
+  flex: 1;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  min-height: 100%;
+}
+
+/*.post-card {*/
+  /*width: 500px;*/
+  /*margin: 16px;*/
+/*}*/
