--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -4,27 +4,6 @@ body{
   height: 100%;
 }
 
-/*.footer {*/
-  /*height: 100px;*/
-  /*background-color: #eee;*/
-  /*border-top: 1px solid #e0e0e0;*/
-  /*padding-top: 35px;*/
-  /*margin-bottom: -100px;*/
-  /*padding-bottom: 100px;*/
-/*}*/
-
-/*#contenido  {*/
-  /*min-height: 100%;*/
-
-  /*!*!* sticky footer *!*!*/
-  /*!*margin-bottom: -100px;*!*/
-  /*!*padding-bottom: 100px;*!*/
-  /*display: -webkit-flex;*/
-  /*display: flex;*/
-  /*-webkit-flex-direction: column;*/
-  /*flex-direction: column;*/
-/*}*/
-
 .posts-list {
   display: flex;
   box-sizing: border-box;
@@ -43,7 +22,7 @@ body{
   min-height: 100%;
 }
 
-/*.post-card {*/
+.post-card {
   /*width: 500px;*/
   /*margin: 16px;*/
-/*}*/
+}
