--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -50,3 +50,13 @@ body{
 .sort-by {
   padding: 8px;
 }
+
+.mdc-list {
+  padding: 0px;
+}
+
+.post-title {
+  --mdc-theme-text-primary-on-primary: white;
+  --mdc-theme-text-primary-on-light: white;
+  --mdc-theme-text-secondary-on-light: white;
+}
