--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -66,3 +66,11 @@ body{
   white-space: pre-wrap;
   word-wrap: break-word;
 }
+
+.text-centered  {
+  text-align: center;
+}
+
+.text-white {
+  color: #FFF;
+}
